@@ -39,9 +39,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The action which has just been activated.</summary>
         <returns>a <see cref="T:Gtk.RadioAction" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
