@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Interface to represent a folder in a filesystem.</summary>
+    <remarks>See also <see cref="T:Gtk.FileSystem"/>, <see cref="T:Gtk.FileSystemUnix"/>, <see cref="T:Gtk.FileSystemWin32"/>. </remarks>
   </Docs>
   <Base />
   <Interfaces>
@@ -30,10 +30,10 @@
         <Parameter Name="path" Type="Gtk.FilePath" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Gets information about the file at <paramref name="path"/>.</summary>
         <param name="path">a <see cref="T:Gtk.FilePath" /></param>
         <returns>a <see cref="T:Gtk.FileInfo" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ListChildren">
@@ -46,10 +46,10 @@
         <Parameter Name="children" Type="GLib.SList" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Lists the child files of this folder by placing them in <paramref name="children"/>. </summary>
         <param name="children">a <see cref="T:GLib.SList" /></param>
-        <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <returns>a <see cref="T:System.Boolean" />, false if there are no children.</returns>
+        <remarks>XXX: shouldn't "children" be an "out" parameter?</remarks>
       </Docs>
     </Member>
     <Member MemberName="IsFinishedLoading">
@@ -60,9 +60,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether this folder's information is fully loaded or not.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Deleted">
@@ -73,8 +73,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Event fired when this folder is deleted.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="FilesAdded">
@@ -85,8 +85,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Event fired when files are added to this folder.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="FilesRemoved">
@@ -97,8 +97,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Event fired when files are removed from this folder.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="FilesChanged">
@@ -109,8 +109,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Event fired when files are changed in this folder.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="FinishedLoading">
@@ -121,8 +121,10 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>
+	  Event fired when this folder's information is finished loading.
+	</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
