@@ -39,9 +39,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The tree model that contains the selected match.</summary>
         <returns>a <see cref="T:Gtk.TreeModel" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Iter">
@@ -52,9 +52,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>An iterator to point at the selected match within the model.</summary>
         <returns>a <see cref="T:Gtk.TreeIter" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
