@@ -42,7 +42,7 @@
       <Docs>
         <summary>To be added</summary>
         <returns>a <see cref="T:Gtk.HTMLEmbedded" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
