@@ -1,3 +1,15 @@
+2004-12-30 Shane Landrum <epicene@pobox.com>
+
+	* en/Gtk/FilesAddedArgs.xml
+	* en/Gtk/FilePath.xml
+	* en/Gtk/FilesRemovedArgs.xml
+	* en/Gtk/FileFolder.xml
+	* en/Gtk/FilesChangedArgs.xml: Filesystem-handling docs.
+	* en/Gtk/ObjectRequestedArgs.xml
+	* en/Gtk/MatchSelectedArgs.xml
+	* en/Gtk/ChangedArgs.xml
+	* en/Gtk/ActionActivatedArgs.xml: Event data docs.
+	
 2004-12-30 Mike Kestner <mkestner@novell.com>
 
 	* en/Gtk/IterFactoryEntry.xml : fix a make assemble breakage.
